[tool.poetry]
name = "simulate"
version = "0.1.0"
description = ""
authors = ["Eduard Maghakyan <edi.maghakyan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sounddevice = "^0.4.4"
setuptools = "^60.9.3"
cffi = "^1.15.0"
SoundFile = "^0.10.3"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
